// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingBadge /> renders link RatingBadge correctly 1`] = `
.c2 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  cursor: pointer;
  text-transform: capitalize;
}

.c2:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c1 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0 {
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 {
  padding-left: 2px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: 1;
}

<button
  className="c0 c1 c2"
  href="/"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="c3"
  >
    <svg
      className="c4"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c5"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders outline RatingBadge correctly 1`] = `
.c2 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(2,108,223,1);
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(2,108,223,1);
  cursor: pointer;
  text-transform: capitalize;
}

.c2:disabled {
  color: rgba(2,108,223,0.2);
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c1 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0 {
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 {
  padding-left: 2px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: 1;
}

<button
  className="c0 c1 c2"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="c3"
  >
    <svg
      className="c4"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c5"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders outline disabled RatingBadge correctly 1`] = `
.c2 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(2,108,223,1);
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(2,108,223,1);
  cursor: pointer;
  text-transform: capitalize;
}

.c2:disabled {
  color: rgba(2,108,223,0.2);
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c1 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0 {
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 {
  padding-left: 2px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: 1;
}

<button
  className="c0 c1 c2"
  disabled={true}
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="c3"
  >
    <svg
      className="c4"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c5"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders standard RatingBadge correctly 1`] = `
.c2 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  cursor: pointer;
  text-transform: capitalize;
}

.c2:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c1 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0 {
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 {
  padding-left: 2px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: 1;
}

<button
  className="c0 c1 c2"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="c3"
  >
    <svg
      className="c4"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c5"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders standard disabled RatingBadge correctly 1`] = `
.c2 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  cursor: pointer;
  text-transform: capitalize;
}

.c2:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c1 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0 {
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 {
  padding-left: 2px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: 1;
}

<button
  className="c0 c1 c2"
  disabled={true}
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="c3"
  >
    <svg
      className="c4"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c5"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders transparent RatingBadge correctly 1`] = `
.c2 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
}

.c2:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c1 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0 {
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 {
  padding-left: 2px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: 1;
}

<button
  className="c0 c1 c2"
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="c3"
  >
    <svg
      className="c4"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c5"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;

exports[`RatingBadge /> renders transparent disabled RatingBadge correctly 1`] = `
.c2 {
  height: 36px;
  width: 100%;
  min-width: 100px;
  font-weight: 600;
  text-align: center;
  border-radius: 2px;
  color: rgba(255,255,255,1);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,1);
  cursor: pointer;
  text-transform: capitalize;
}

.c2:disabled {
  color: rgba(255,255,255,0.5);
  background-color: transparent;
  border: 1px solid rgba(255,255,255,0.5);
  cursor: not-allowed;
}

.c1 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 45px;
  min-width: 45px;
  height: 20px;
}

.c0 {
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 {
  padding-left: 2px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  line-height: 1;
}

<button
  className="c0 c1 c2"
  disabled={true}
  itemProp="aggregateRating"
  itemScope={true}
  itemType="https://schema.org/AggregateRating"
  size="regular"
>
  <span
    className="c3"
  >
    <svg
      className="c4"
      fill="currentColor"
      height={12}
      viewBox="0 0 11 10"
      width={12}
    >
      <path
        d="M5.5 7.7L2.267 9.95l1.14-3.77L.27 3.8l3.938-.08L5.5 0l1.293 3.72 3.938.08-3.139 2.38 1.14 3.77z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="c5"
    >
      RatingBadge
    </span>
    <meta
      content="4.8"
      itemProp="ratingValue"
    />
    <meta
      content="5"
      itemProp="bestRating"
    />
    <meta
      content="20"
      itemProp="ratingCount"
    />
  </span>
</button>
`;
